--- a/app/src/main/res/layout/second_view.xml
+++ b/app/src/main/res/layout/second_view.xml
@@ -3,7 +3,7 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
-    <hsj.whatever.com.selfviewdemo.SecondView
+    <hsj.whatever.com.selfviewdemo.older.SecondView
         android:id="@+id/second"
         android:layout_width="200dp"
         android:layout_height="50dp"
