--- a/aidlclient/src/main/res/layout/activity_main.xml
+++ b/aidlclient/src/main/res/layout/activity_main.xml
@@ -8,6 +8,11 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.colander.aidlclient.MainActivity">
 
-    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
-        android:text="Hello World!" />
+    <TextView
+        android:textColor="@android:color/white"
+        android:background="@drawable/shadow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="sendMessage"
+        android:text="sendMessage" />
 </RelativeLayout>
