--- a/app/src/main/res/layout/activity_anim.xml
+++ b/app/src/main/res/layout/activity_anim.xml
@@ -3,8 +3,16 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
-    
+    <LinearLayout
+        android:layout_margin="100dp"
+        android:layout_gravity="center"
+        android:orientation="horizontal"
+        android:id="@+id/ll"
+        android:background="@color/blue_btn_bg_color"
+        android:layout_width="100dp"
+        android:layout_height="20dp"></LinearLayout>
     <Button
+        android:id="@+id/btn_alpha"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
