--- a/app/src/main/res/layout/activity_anim_2.xml
+++ b/app/src/main/res/layout/activity_anim_2.xml
@@ -7,5 +7,5 @@
         android:id="@+id/image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/animated2"/>
+        android:src="@drawable/three_balls"/>
 </LinearLayout>
