--- a/app/src/main/res/layout/merge_xml.xml
+++ b/app/src/main/res/layout/merge_xml.xml
@@ -4,10 +4,11 @@
        android:layout_width="match_parent"
        android:layout_height="match_parent">
     <Button android:layout_width="100dp"
-            android:onClick="OnClick"
+        android:layout_margin="10dp"
+            android:onClick="OnOpenClick"
             android:layout_centerHorizontal="true"
-            android:layout_height="20dp"
-            android:text="123123123"/>
+            android:layout_height="40dp"
+            android:text="open"/>
     <View
         android:background="@color/blue_btn_bg_color"
         android:layout_width="match_parent"
@@ -19,5 +20,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout="@layout/my_sub_tree"/>
+
+    <Button
+        android:onClick="OnCloseClick"
+        android:text="close"
+        android:layout_marginTop="100dp"
+        android:layout_marginLeft="10dp"
+        android:layout_width="100dp"
+        android:layout_height="40dp"/>
 
 </merge>
